# flattree

./: .gitignore  LICENSE  README.md  flattree.py  flattree.spec  init_test_files.sh  pyproject.toml
src/: cli.py  core.py  utils.py
